# CocktailBerry-Hardware

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: labels.yml  pr-checks.yml  release-artifacts.yml  release-drafter.yml
cad/: README.md
cad/accessories/: CocktailBerryPagePlates.3mf  PlateBox.3mf  PlateBox.FCStd  README.md
cad/machines/2go/: ElectricLid.FCStd  FootPlugs.FCStd  FootTransport.FCStd  Funnel.FCStd  LegHolder.FCStd  LegStabilizers.FCStd  PumpGrid.FCStd
cad/machines/mk3/: Bundler.FCStd  DrainingRack.FCStd  DripTray.FCStd  FunnelBend.FCStd  FunnelBendSmall.FCStd  FunnelStraight.FCStd  (+8 more)
docs/: accessories.md  index.md  requirements.txt
docs/.snippets/: additional_parts.md  disclaimer.md  inserted_threads.md
docs/machines/: index.md
docs/overrides/: main.html
docs/pcbas/: cocktailberry-board-gpio.md  cocktailberry-board-i2c.md  cocktailberry-board-slim.md  cocktailberry-board.md  index.md
docs/stylesheets/: extra.css
pcb/: .gitignore  README.md
pcb/cbb-gpio/: corrections.csv  mk1-cbb.kicad_pcb  mk1-cbb.kicad_prl  mk1-cbb.kicad_sch
pcb/cbb-i2c/: JLCImport.kicad_sym  cbb-i2c.kicad_pcb  cbb-i2c.kicad_prl  cbb-i2c.kicad_pro  cbb-i2c.kicad_sch  cbb-i2c.net  cbb-i2c.xml  pump_control.kicad_sch
pcb/cbb-slim/: corrections.csv  mk1-slim.kicad_pcb  mk1-slim.kicad_prl  mk1-slim.kicad_pro  mk1-slim.kicad_sch  mk1-slim.net  mk1-slim.xml  pump_control.kicad_sch
scripts/: build_artifacts.py  build_fab.py  drc_report.py  export_freecad.py
(+61 files in other folders)
