[project]
name = "cocktailberry-hardware"
version = "0.1.0"
description = "Official CocktailBerry Hardware Documentation"
authors = [{ name = "Andre Wohnsland", email = "info@cocktailberry.org" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
docs = [
    "zensical>=0.0.47",
]

[tool.uv]
default-groups = ["docs"]
